Fix #navbar on small screens

--- a/assets/less/wirc.less
+++ b/assets/less/wirc.less
@@ -39,6 +39,12 @@ body.chat { padding-top: 52px; padding-bottom: 32px; }
   }
 }
 
+@media (max-width: 767px) {
+  #navbar .container-fluid {
+    padding: 0 20px;
+  }
+}
+
 /* chat */
 #connection_list {
   position: fixed;
